saving stage 2 added VPN connection feature